--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -45,9 +45,9 @@ $s-color--loader: $s-color--swatch-blue;
 
 /*** Buttons and Inputs ***/
 //Button Default
-$s-color--btn-default__top: #FFF;
-$s-color--btn-default__bottom: #FBFBFB;
-$s-color--btn-default__border: 1px solid #DDD;
+$s-color--btn-default__top: #E0E0E0;
+$s-color--btn-default__bottom: #DADADA;
+$s-color--btn-default__border: 1px solid #AAA;
 $s-color--btn-default__focus: $s-color--swatch-blue;
 
 $s-color--btn-default-hover__top: $s-color--btn-default__bottom;
