--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -45,9 +45,20 @@ $s-color--loader: $s-color--swatch-blue;
 
 /*** Buttons and Inputs ***/
 //Button Default
-$s-color--btn-default__top: #E0E0E0;
+$s-color--btn-default__top: #F7F7F7;
 $s-color--btn-default__bottom: #DADADA;
 $s-color--btn-default__border: 1px solid #AAA;
-$s-color--btn-default__focus: $s-color--swatch-blue;
 
 $s-color--btn-default-hover__top: $s-color--btn-default__bottom;
+
+//Button Primary
+$s-color--btn-primary__top: $s-color--swatch-blue;
+$s-color--btn-primary__bottom: darken($s-color--btn-primary__top, 8%);
+
+//Btn Secondary
+$s-color--btn-secondary__top: $s-color--pastel-blue;
+$s-color--btn-secondary__bottom: darken($s-color--btn-secondary__top, 8%);
+
+//Btn Danger
+$s-color--btn-danger__top: $s-color--swatch-red;
+$s-color--btn-danger__bottom: darken($s-color--btn-danger__top, 8%);
