--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -32,6 +32,7 @@
 
 //Tools
 @import './tools/flex.scss';
+@import './tools/input.scss';
 @import './tools/list.scss';
 @import './tools/prefix.scss';
 
