Added input styles, merged with button styles, created different style..styles

--- a/public/styles/elements/inputs.scss
+++ b/public/styles/elements/inputs.scss
@@ -12,4 +12,8 @@ input,textarea {
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
+
+  @include t-placeholder() {
+    color: inherit;
+  }
 }
