--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -32,7 +32,6 @@
 
 //Tools
 @import './tools/flex.scss';
-@import './tools/input.scss';
 @import './tools/list.scss';
 @import './tools/prefix.scss';
 
@@ -43,6 +42,7 @@
 @import './tools/_responsive.scss';
 
 @import './tools/_absolute-centering.scss';
+@import './tools/_input.scss';
 
 //Resets
 
