--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -71,6 +71,7 @@
 
 //Components
 @import './components/_body-section.scss';
+@import './components/_footer.scss';
 @import './components/_image-section.scss';
 @import './components/_page.scss';
 @import './components/_section.scss';
