--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -61,6 +61,7 @@
 @import './objects/title.scss';
 
 @import './objects/_app.scss';
+@import './objects/_background.scss';
 @import './objects/_button.scss';
 @import './objects/_floating-content-box.scss';
 @import './objects/_form.scss';
