--- a/public/styles/objects/_app.scss
+++ b/public/styles/objects/_app.scss
@@ -9,20 +9,10 @@
  *    1.0.0 - 2018/05/03
  */
 .o-app {
-  //display: inline-block;//Fixes collapsing margins on children.
+  position: relative;
   min-height: 100vh;
   width: 100%;
 
   @include t-flexbox();
   @include t-flex-direction(column);
-
-  //Civil Twilight
-  &--style-civil-twilight {
-    //http://colorzilla.com/gradient-editor/#bea9d0+0,dab2cd+25,e7b7c5+50,e4b0a3+75,c79a97+100
-    background: #bea9d0;
-    background: -moz-linear-gradient(top, #bea9d0 0%, #dab2cd 25%, #e7b7c5 50%, #e4b0a3 75%, #c79a97 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #bea9d0 0%,#dab2cd 25%,#e7b7c5 50%,#e4b0a3 75%,#c79a97 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #bea9d0 0%,#dab2cd 25%,#e7b7c5 50%,#e4b0a3 75%,#c79a97 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bea9d0', endColorstr='#c79a97',GradientType=0 ); /* IE6-9 */
-  }
 }
