Added shadows, moved variables around

--- a/public/styles/components/_body-section.scss
+++ b/public/styles/components/_body-section.scss
@@ -3,7 +3,7 @@
  *    Body Section.
  *
  *  Dependencies:
- *    styles/settings/colors.scss
+ *    styles/tools/_shadow.scss
  *
  *  Version:
  *    1.0.0 - 2018/05/13
@@ -11,6 +11,7 @@
 $c-body-section--padding: 1em;
 
 .c-body-section {
+  @extend %t-dp--shadow;
   background: $s-color--background;
   padding: $c-body-section--padding;
 }
