--- a/public/styles/objects/_background.scss
+++ b/public/styles/objects/_background.scss
@@ -3,6 +3,7 @@
  *    Styles for the background of the site.
  *
  *  Dependencies:
+ *    styles/settings/z.scss
  *    styles/tools/_absolute-centering.scss
  *
  *  Version:
@@ -14,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: $s-z--background;
 
   //Civil Twilight
   &--style-twilight {
