--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -28,6 +28,7 @@ $s-color--swatch-blue: #BAE1FF;
 */
 
 $s-color--background: white;
+$s-color--shadow: rgba(0, 0, 0, 0.5);
 
 //Hyperlink Colors
 $s-color--link: #FC78DE;
