--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -77,6 +77,7 @@
 @import './components/_image-section.scss';
 @import './components/_page.scss';
 @import './components/_section.scss';
+@import './components/_split-section.scss';
 @import './components/_video-section.scss';
 
 //Pages
