--- a/public/styles/objects/_background.scss
+++ b/public/styles/objects/_background.scss
@@ -16,6 +16,7 @@
   width: 100%;
   height: 100%;
   z-index: $s-z--background;
+  overflow: hidden;
 
   //Civil Twilight
   &--style-twilight {
@@ -37,9 +38,14 @@
   //Elements that fill
   &__grain {
     @include t-absolute-fill();
+    background-image: url('./../images/grain.png');
   }
 
-  &__grain {
-    background-image: url('./../images/grain.png');
+  &__palm {
+    position: absolute;
+    width: 150%;
+    bottom: -10%;
+    left: -40%;
+    @include t-drop-shadow(2.5vw, 2.5vw, 0, rgba(0, 0, 0, 0.5));
   }
 }
