--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -73,6 +73,7 @@
 
 //Components
 @import './components/_body-section.scss';
+@import './components/_clear-section.scss';
 @import './components/_footer.scss';
 @import './components/_image-section.scss';
 @import './components/_page.scss';
@@ -81,6 +82,7 @@
 @import './components/_video-section.scss';
 
 //Pages
+@import './pages/_contact-page.scss';
 @import './pages/_home-page.scss';
 
 //Utilities
