--- a/public/styles/components/_footer.scss
+++ b/public/styles/components/_footer.scss
@@ -8,12 +8,15 @@
  *  Version:
  *    1.0.0 - 2018/05/16
  */
+$c-footer--shadow: 1em;
 .c-footer {
-  padding-top: 2em;
-  padding-bottom: 3em;
+  padding-top: 4em;
+  padding-bottom: 6em;
   position: relative;
   overflow: hidden;
-  background: white;
+  background-color: #F3E4C6;
+  background-image: url('./../images/grain.png');
+  @include t-box-shadow(0px, -$c-footer--shadow, $c-footer--shadow, 0px, rgba(0, 0, 0, 0.5));
 
   &__inner {
     text-align: center;
@@ -34,5 +37,13 @@
     display: inline-block;
     padding-left: 1em;
    }
+  }
+
+  &__part {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
   }
 }
