--- a/public/styles/pages/_contact-page.scss
+++ b/public/styles/pages/_contact-page.scss
@@ -8,7 +8,8 @@
  *    1.0.0 - 2018/05/28
  */
 .p-contact-page {
-  background-image: url('./../images/pattern_poly.svg');
+  background-color: #37085E;
+  background-image: url('./../images/patterns/arcade.svg');
 
   &__message-element {
     resize: none;
