--- a/public/styles/components/_image-section.scss
+++ b/public/styles/components/_image-section.scss
@@ -11,6 +11,7 @@
   position: relative;
 
   &__image {
+    display: block;
     width: 100%;
   }
 
@@ -24,7 +25,7 @@
 
   &__content {
     @include t-absolute-fill();
-    
+
     &-inner {
       position: relative;
       height: 100%;
