Removed (temp) Page bottom padding

--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -9,7 +9,7 @@
  *    1.0.0 - 2018/05/05
  */
 .c-page {
-  padding-bottom: 5em;
+  //padding-bottom: 5em;
 
   &__boundary {
     max-width: $s-screen-boundary;
