--- a/public/styles/objects/_video.scss
+++ b/public/styles/objects/_video.scss
@@ -10,23 +10,36 @@
  *  Version:
  *    1.0.0 - 2018/05/07
  */
+%o-video__media-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+}
+
+$o-video__loader-z: 1;
+$o-video__fallback-z: 0;
+
 .o-video {
   position: relative;
 
   &__video {
+    width: 100%;
 
     &.is-full {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit:cover;
+      @extend %o-video__media-cover;
+
     }
   }
 
   &__image {
-    position: absolute;
+    @extend %o-video__media-cover;
+    z-index: $o-video__fallback-z;
+  }
 
+  &__loader {
+    z-index: $o-video__loader-z;
   }
 }
