Testing video, made block to fix margin issue

--- a/public/styles/objects/_video.scss
+++ b/public/styles/objects/_video.scss
@@ -28,6 +28,7 @@ $o-video__loader-z: 2;
 
   &__video {
     width: 100%;
+    display: block;
     position: relative;//Needed by some browser to allow the Z-Index to apply
     z-index: $o-video__video-z;
 
