Added ElementScrollFader effect

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -63,6 +63,7 @@
 @import './objects/_app.scss';
 @import './objects/_background.scss';
 @import './objects/_button.scss';
+@import './objects/_element-scroll-fader.scss';
 @import './objects/_floating-content-box.scss';
 @import './objects/_form.scss';
 @import './objects/_input.scss';
