--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -69,6 +69,7 @@
 @import './objects/_input.scss';
 @import './objects/_loader.scss';
 @import './objects/_navbar.scss';
+@import './objects/_page-transition.scss';
 @import './objects/_title.scss';
 @import './objects/_video.scss';
 
