--- a/public/styles/elements/_body.scss
+++ b/public/styles/elements/_body.scss
@@ -15,4 +15,5 @@ body {
 
   font-family: $s-font--stack-default;
   font-size: $s-font--size--base;
+  overflow-y: scroll;//Really makes the transitions feel smoother
 }
