--- a/public/styles/objects/main.scss
+++ b/public/styles/objects/main.scss
@@ -6,5 +6,10 @@
  *    1.0.0 - 2018/05/07
  */
 .o-main {
-  @include t-flex-grow(1);
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+
+  @extend %t-flexbox;
+  @include t-flex-direction(column);
 }
