--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -42,7 +42,7 @@ $s-color--navbar__bar-hover: $s-color--pastel-blue;
 $s-color--navbar__bar-active: $s-color--pastel-green;
 
 //Menu Colors
-$s-color--menu__background: red;
+$s-color--menu__background: rgba(0, 0, 0, 0.8);
 
 //loader
 $s-color--loader: $s-color--swatch-blue;
