--- a/public/styles/objects/_app.scss
+++ b/public/styles/objects/_app.scss
@@ -10,9 +10,8 @@
  */
 .o-app {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
-
-  @extend %t-flexbox;
-  @include t-flex-direction(column);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
