--- a/public/styles/objects/_page-transition.scss
+++ b/public/styles/objects/_page-transition.scss
@@ -20,7 +20,7 @@
 .o-page-transition__container {
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: relative;
 }
 
